Code cleanup es.env/gateway/http/monitor/node packages
Remove unused code, and minor code cleanups and improvements.
Replace POJO classes with records.